@@ -1,5 +1,6 @@
 == master
 
+* Don't require an id during bootstrap
 * Allow bootstrapping to be easily added to non-enumerations
 * Cache results for #exists? / #calculate
 * Add the ability to skip the internal cache via Model#uncached
